# ImdbSorter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: AkasFile.h  App.h  BaseFile.h  EpisodeFile.h  FileProcessing.h  Packet.h  RatingFile.h
include/FileProcessors/: AkasFile.h  BaseFile.h  EpisodeFile.h  RatingFile.h
src/: AkasFile.cpp  App.cpp  BaseFile.cpp  EpisodeFile.cpp  FileProcessing.cpp  Packet.cpp  RatingFile.cpp
src/FileProcessors/: AkasFile.cpp  BaseFile.cpp  EpisodeFile.cpp  RatingFile.cpp
